src/index.css
/* ... */
a:active,
a:hover,
a {
  text-decoration: none;
  color: rgba(255, 255, 255, 0);
}

/**
 * Set up a decent box model on the root element
 */
html {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  color: #212121;
  font-family: 'Montserrat Alternates', sans-serif;
  font-weight: 400;
  scroll-behavior: smooth;
}

html,
body {
  position: relative;
  height: 100%;
}

/**
 * Make all elements from the DOM inherit from the parent box-sizing
 * Since `*` has a specificity of 0, it does not override the `html` value
 * making all elements inheriting from the root box-sizing value
 * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
 */
*,
*::before,
*::after {
  -webkit-box-sizing: inherit;
          box-sizing: inherit;
}

/**
 * Basic styles for links
 */
a {
  text-decoration: none;
}

a:hover, a:active, a:focus, a:focus-within {
  text-decoration: underline;
}

template.page {
  display: none;
}

h2 {
  color: #186049;
  font-size: 40px;
}

.page-title {
  margin: 30px 0px;
}

.subtitle {
  font-weight: bold;
}

/**
 * Basic typography style for copy text
 */
/**
 * Clear inner floats
 */
.clearfix::after {
  clear: both;
  content: '';
  display: table;
}

/**
 * Main content containers
 * 1. Make the container full-width with a maximum width
 * 2. Center it in the viewport
 * 3. Leave some space on the edges, especially valuable on small screens
 */
.container {
  max-width: 1280px;
  /* 1 */
  margin-left: auto;
  /* 2 */
  margin-right: auto;
  /* 2 */
  padding-left: 40px;
  /* 3 */
  padding-right: 40px;
  /* 3 */
  width: 100%;
  /* 1 */
  height: 100%;
}

/**
 * Hide text while making it readable for screen readers
 * 1. Needed in WebKit-based browsers because of an implementation bug;
 *    See: https://code.google.com/p/chromium/issues/detail?id=457146
 */
.hide-text {
  overflow: hidden;
  padding: 0;
  /* 1 */
  text-indent: 101%;
  white-space: nowrap;
}

/**
 * Hide element while making it readable for screen readers
 * Shamelessly borrowed from HTML5Boilerplate:
 * https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css#L119-L133
 */
.visually-hidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.usd-symbol::before {
  content: '$';
}

.header {
  position: relative;
  width: 100%;
  height: 200px;
}

.header__container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.header__logo {
  cursor: pointer;
  margin-top: 40px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  width: 155px;
  height: 155px;
  -webkit-transition: .3s;
  transition: .3s;
  border-radius: 100%;
  background-color: #186049;
  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 0px 10px 20px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
          box-shadow: rgba(0, 0, 0, 0.15) 0px 10px 20px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
}

.header__logo::before {
  content: '';
  background-color: #FFFFFF;
  width: 23px;
  height: 23px;
  border-radius: 100%;
  -webkit-transform: translateY(-12px);
          transform: translateY(-12px);
}

.header__logo:hover {
  -webkit-transform: scale(0.98);
          transform: scale(0.98);
  -webkit-box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px;
          box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px;
}

.header__logo-text {
  margin: 0;
  color: #FFFFFF;
  font-weight: 200;
  line-height: 25px;
  text-decoration: none;
  padding-left: 5px;
}

.nav {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  margin-top: 80px;
  height: 50px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin-left: 120px;
  border-bottom: 1px solid;
  border-radius: 3px;
  border-color: #D9D9D9;
}

.nav__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.nav__item {
  padding: 0 20px;
}

.nav__link {
  color: #909090;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

.nav__link:hover, .nav__link:active {
  text-decoration: none;
  color: #186049;
  outline: none;
}

.cart {
  margin-left: auto;
  margin-right: 20px;
  background: url(./favicon.svg);
  background-size: 30px, 30px;
  background-position: top, left;
  width: 50px;
  height: 40px;
  background-repeat: no-repeat;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
  cursor: pointer;
}

.cart__num {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  border-radius: 100%;
  width: 32px;
  height: 32px;
  font-size: 14px;
  line-height: 1;
  background-color: #22795D;
  color: #FFFFFF;
  margin-right: -9px;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

.cart__num:hover, .cart__num:active {
  background-color: #186049;
}

.total-amount {
  min-width: 70px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 5px;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}
/* ... */

